# psh

./: .gitignore  Cargo.toml  LICENSE  README.md
compiler/parser/: Cargo.toml
compiler/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs  tests.rs  token_set.rs
compiler/parser/src/grammar/: expr.rs  ident.rs  path.rs  stmt.rs  value.rs  variable_def.rs
compiler/parser/src/parser/: marker.rs  parse_error.rs
compiler/parser/src/tests/repl_line/: binary_expr__fails_when_missing_lhs.test  binary_expr__fails_when_missing_rhs.test  binary_expr__negation_has_higher_binding_power.test  binary_expr__parentheses_affect_precedence.test  binary_expr__parse_infix_expression_with_mixed_binding_power.test  binary_expr__parse_left_associative_infix_expression.test  binary_expr__parse_pipe_operator.test  binary_expr__parse_simple_infix_expression.test  binary_expr__parse_with_comments.test  comment__parse_single_comment.test  expr__fails_when_missing_rhs.test  expr__fails_when_negating_bad_expr.test  expr__fails_when_negating_missing_expr.test  expr__fails_when_tuple_missing_comma.test  expr__fails_when_tuple_missing_rhs.test  expr__fails_when_unclosed_parentheses.test  expr__fails_when_unclosed_parentheses_with_comma.test  expr__fails_when_unit_has_comma.test  expr__fails_when_variable_missing_name.test  expr__parse_function_call_multiple_args_no_commas.test  expr__parse_function_call_multiple_args_with_commas.test  expr__parse_function_call_one_arg.test  expr__parse_negation.test  (+25 more)
compiler/syntax/: Cargo.toml
compiler/syntax/src/: lib.rs
(+5 files in other folders)
