# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "psh_parser"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2021"

[dependencies]
drop_bomb = "0.1.5"
rowan = "0.15"
text-size = "1.1"
itertools = "0.11"
psh_lexer = { path = "../lexer" }
psh_syntax = { path = "../syntax" }

[dev-dependencies]
psh_test_harness = {path = "../test_harness"}
