# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "psh_syntax"
version = "0.1.0"
authors = ["theochupp <tclchiam@gmail.com>"]
edition = "2021"

[dependencies]
psh_lexer = { path = "../lexer" }
num-derive = "0.3.3"
num-traits = "0.2.14"
rowan = "0.15"
